fix v-align home

--- a/assets/sass/views/_home-tpl.scss
+++ b/assets/sass/views/_home-tpl.scss
@@ -11,13 +11,14 @@
         min-height: 100vh;
         background: url('../img/bgHome.png');
         background-size: cover;
+        padding: 0 30px;
       
       .left--container {
         margin: 0 auto;
         width: 100%;
         max-width: 900px;
-        padding: 30px;
-        height:100%;
+        padding: 0 30px;
+        height:100vh;
         
         .vCenter {
           height: 100%;
